@@ -10,8 +10,9 @@ v0.4, 2012-08-?? -- Slouching toward nirvana
      * Support for non-Hadoop Streaming jar steps (#499)
      * Support for arbitrary commands as Hadoop Streaming
        mappers/combiners/reducers
-     * mapper_filter and reducer_filter allow running of a UNIX command in
-       front of mappers or reducers to filter input outside of the interpreter
+     * mapper_pre_filter, combiner_pre_filter, and reducer_pre_filter allow
+       running of a UNIX command in front of tasks to filter input outside of
+       the interpreter
  * Bug fixes:
    * Silenced some incorrect warnings about ignored options in 'inline' runner
  * Removed deprecated functionality:
